--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.37.0",
     "astro": "^5.6.1",
+    "astro-mermaid": "^1.2.0",
     "sharp": "^0.34.2"
   }
 }
