--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.12",
     "@astrojs/starlight": "^0.37.0",
     "astro": "^5.6.1",
     "astro-mermaid": "^1.2.0",
