--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.12",
+    "@astrojs/react": "^4.4.2",
     "@astrojs/starlight": "^0.37.0",
-    "astro": "^5.6.1",
+    "astro": "^4.16.14",
     "astro-mermaid": "^1.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sharp": "^0.34.2"
   }
 }
